<resources>
    <string name="app_name">Mpr Eventos</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="eventos">Eventos</string>
    <string name="tematicas">Temáticas</string>
    <string name="categorias">Categorías</string>
    <string name="productos">Productos</string>
    <string name="email">Email:</string>
    <string name="contraseña">Contraseña:</string>
    <string name="ini_sesion">Iniciar sesión</string>
    <string name="mpr_des">Ambientación de eventos</string>
    <string name="signIngExitoso">Inicio de sesión exitoso</string>
    <string name="signIngFallido">Los datos ingresados son incorrectos</string>
    <string name="empyPasswrord">Debe ingresar una contraseña</string>
    <string name="empyEmail">Debe ingresar un correo</string>
    <string name="nombre">Nombre</string>
    <string name="accesibility_event">imagen de un tipo de evento</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="nombre_evento">Nombre evento:</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar">Agregar</string>
    <string name="cambiar_imagen">Cambiar imagen</string>
    <string name="modificar">Modificar</string>
    <string name="nombre_tematica">Nombre temática:</string>
    <string name="accesibility_tematica">imagen correspondiente a una temática en especifico</string>
    <string name="descripcion">descripción</string>
    <string name="accesibility_categoria">Imagen que representa a una categoría</string>
    <string name="nombre_categoria">Nombre categoría:</string>
    <string name="descripcion_categoria">Descripción categoría:</string>
    <string name="nombre_producto">Nombre producto:</string>
    <string name="descripcion_producto">Descripción producto:</string>
    <string name="seleccionar_evento">Seleccionar evento:</string>
  <string name="accesibilidad_producto">Imagen de un producto</string>
  <string name="dialog_cargandodatos">Se estan cargando los datos</string>
  <string name="dialog_espere">Por favor espere..</string>
</resources>
