<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".controller.CategoriaAdd">

  <ImageView
    android:id="@+id/imgCategoria"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:adjustViewBounds="false"
    android:contentDescription="@string/accesibility_categoria"
    android:nestedScrollingEnabled="false"
    android:scaleType="fitXY"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btSelectImagenCategoria"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:onClick="onClickAddCategoria"
    android:text="@string/seleccionar_imagen"/>

  <androidx.appcompat.widget.AppCompatTextView
    style="@style/TextAppearance.MaterialComponents.Body1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:text="@string/nombre_categoria"/>

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/editNombreCategoria"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:singleLine="true"/>

  <androidx.appcompat.widget.AppCompatTextView
    style="@style/TextAppearance.MaterialComponents.Caption"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/eventos"/>


  <androidx.appcompat.widget.AppCompatSpinner
    android:id="@+id/spinnerCategoriaEvento"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

  <androidx.appcompat.widget.AppCompatTextView
    style="@style/TextAppearance.MaterialComponents.Caption"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/tematicas"/>

  <androidx.appcompat.widget.AppCompatSpinner
    android:id="@+id/spinnerCategoriaTematica"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_margin8"
    android:gravity="center_horizontal">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btCancelarCategoria"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/activity_vertical_margin"
      android:onClick="onClickAddCategoria"
      android:text="@string/cancelar"
      android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btAddCategoria"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/activity_vertical_margin"
      android:onClick="onClickAddCategoria"
      android:text="@string/agregar"/>

  </LinearLayout>

</LinearLayout>