<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".controller.ProductoAdd">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/imageViewProducto"
      android:layout_width="194dp"
      android:layout_height="240dp"
      android:adjustViewBounds="false"
      android:contentDescription="@string/accesibilidad_producto"
      android:nestedScrollingEnabled="false"
      android:scaleType="fitXY"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="4dp"
      android:layout_gravity="center"
      android:orientation="vertical">

      <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventos"/>

      <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerProductoEvento"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

      <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/tematicas"/>

      <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerProductoTematica"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

      <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/categorias"/>

      <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerProductoCategoria"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    </LinearLayout>

  </LinearLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btSelectImagenProductos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="onClickAddProductos"
    android:layout_margin="@dimen/dimen_margin8"
    android:text="@string/seleccionar_imagen"/>

  <androidx.appcompat.widget.AppCompatTextView
    style="@style/TextAppearance.MaterialComponents.Body1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:text="@string/nombre_producto"/>

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/editNombreProducto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:singleLine="true"/>

  <androidx.appcompat.widget.AppCompatTextView
    style="@style/TextAppearance.MaterialComponents.Body1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:text="@string/descripcion_producto"/>

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/editDescripcionProducto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginStart="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin"
    android:singleLine="true"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btCancelarProducto"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/activity_vertical_margin"
      android:onClick="onClickAddProductos"
      android:text="@string/cancelar"
      android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/btAddProducto"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/activity_vertical_margin"
      android:onClick="onClickAddProductos"
      android:text="@string/agregar"/>

  </LinearLayout>

</LinearLayout>