<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.EventoDetalles"
    android:layout_margin="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imgEventoDetalles"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSelectImagenDetalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="onClicEventoDetalles"
        android:contentDescription="@string/accesibility_event"
        android:text="@string/cambiar_imagen" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"

        android:text="@string/nombre_evento" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editNombreEventoDetalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btCancelarEventoDetalles"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="onClicEventoDetalles"
            android:text="@string/cancelar"
            android:textColor="@color/colorPrimaryDark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btEventoDetalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="onClicEventoDetalles"
            android:text="@string/modificar" />

    </LinearLayout>

</LinearLayout>