<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.TematicaDetalles">

    <ImageView
        android:id="@+id/imgTematicaDetalles"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/accesibility_tematica" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSelectImagenTematicaDetalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="onClickTematicaDetalles"
        android:text="@string/seleccionar_imagen" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/nombre_tematica" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editNombreTematicaDetalles"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_height="40dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/spinnerTematicaDetalles">


    </androidx.appcompat.widget.AppCompatSpinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btCancelarTematicaDetalles"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="onClickTematicaDetalles"
            android:text="@string/cancelar"
            android:textColor="@color/colorPrimaryDark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btModTematicaDetalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="onClickTematicaDetalles"
            android:text="@string/modificar" />

    </LinearLayout>

</LinearLayout>