<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".view.EventoAdd">

    <ImageView
        android:id="@+id/imgEvento"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSelectImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_imagen"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="onClickAddEvento" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_evento"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/TextAppearance.MaterialComponents.Body1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editNombreEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btCancelarEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/cancelar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="onClickAddEvento" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btAddEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/agregar"
            android:onClick="onClickAddEvento" />

    </LinearLayout>
</LinearLayout>