<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/signInContainer"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context=".controller.SignInActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.AppCompatImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/logompr"/>
  </RelativeLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.AppCompatTextView
      style="@style/TextAppearance.MaterialComponents.Body1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/mpr_des"
      android:textColor="#40C8BF"/>
  </RelativeLayout>

  <androidx.appcompat.widget.AppCompatTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/email"/>

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/edtSignInEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"/>

  <androidx.appcompat.widget.AppCompatTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:text="@string/contraseña"/>

  <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/edtSignInPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"/>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:gravity="center">

    <com.google.android.material.button.MaterialButton
      android:id="@+id/sigInButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ini_sesion"/>
  </RelativeLayout>
</LinearLayout>